Adding ship data import from uex
